# dummy-menu

./: CMakeLists.txt  README.md
cmake/: libmenu.cmake  sdl_simulator.cmake
include/menu/: lv_anim.h
menu/: container.cpp  container.h  dispaly.cpp  lv_anim.cpp  lv_anim.h  menu.cpp  menu.h  scope.cpp  scope.h  selector.cpp  selector.h
simulator/: display.cpp
src/: container.cpp  menu.cpp
